# rap-pipeline

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
config/: settings.py
dags/: collect_papers_dag.py
pipeline/collect/: arxiv_client.py
pipeline/process/: embedder.py  parser.py  tagger.py
pipeline/utils/: embedding.py  parsing.py
